objects/BusinessLine__c.object
<CustomObject>
    <description>SFDC1-8429: Creating a new object that will be used in products</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC1-8429: This field will be used for holding Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-8429: This field will be used for holding SAP Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Sap Number</inlineHelpText>
        <label>SAP Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-8429: This field will be used for holding Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAPNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Lines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>